--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -29,7 +29,7 @@ body {
   .container {
     padding: 2rem;
     width: 400px;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     background-color: var(--primary-color);
     h1 {
       font-size: 36px;
@@ -113,6 +113,9 @@ body {
   background-color: #5468ff;
   border-radius: 8px;
 }
+body {
+  overflow-y: hidden;
+}
 .home {
   overflow: hidden;
   background-color: var(--bg-color);
@@ -120,6 +123,7 @@ body {
   width: 100vw;
   color: white;
   display: flex;
+  min-width: 1000px;
   .left {
     overflow: hidden;
     display: flex;
@@ -140,7 +144,7 @@ body {
         background-color: var(--input-bg-color);
         padding: 1rem;
         display: flex;
-        border-radius: 1rem 0px 0px 1rem;
+        border-radius: 0.5rem 0px 0px 0.5rem;
         align-items: center;
         padding-right: 10px;
         img {
@@ -160,7 +164,7 @@ body {
       .buttons {
         min-width: 80px;
         height: 72px;
-        border-radius: 0px 1rem 1rem 0px;
+        border-radius: 0px 0.5rem 0.5rem 0px;
         align-items: center;
         background-color: var(--input-bg-color);
         display: flex;
@@ -190,7 +194,7 @@ body {
       }
     }
     .search {
-      border-radius: 8px;
+      border-radius: 0.5rem;
       background-color: var(--input-bg-color);
       &.error {
         outline: 2px solid red;
@@ -220,6 +224,13 @@ body {
           height: 100%;
         }
       }
+      .clear {
+        cursor: pointer;
+        min-width: 26px;
+        width: 26px;
+        height: 26px;
+        margin-right: 10px;
+      }
     }
     .rooms {
       flex: 1;
@@ -232,15 +243,18 @@ body {
         margin-bottom: 1rem;
       }
       ul {
-        padding-right: 10px;
+        border-radius: 0.5rem;
+        background-color: var(--input-bg-color);
+        padding: 0px 10px;
+        margin-bottom: 1rem;
         flex: 1;
         overflow-y: auto;
         li {
           &.active {
             background-color: var(--bg-color);
           }
-          border-radius: 8px;
-          background-color: var(--input-bg-color);
+          border-radius: 0.5rem;
+          background-color: var(--primary-color);
           display: flex;
           margin: 1rem 0px;
           align-items: center;
@@ -271,7 +285,95 @@ body {
   }
   .messages {
     overflow: hidden;
-
-    background-color: var(--input-bg-color);
+    background-color: var(--bg-color);
+    flex: 1;
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    .header {
+      margin-bottom: 1rem;
+      .content {
+        padding: 1rem;
+        border-radius: 0.5rem;
+        background-color: var(--primary-color);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .l {
+          display: flex;
+          align-items: center;
+          img {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+            border-radius: 100%;
+          }
+          p {
+            max-width: 400px;
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 20px;
+          }
+        }
+        button {
+          height: 35px;
+          width: 35px;
+          background-color: transparent;
+          cursor: pointer;
+          border: none;
+        }
+      }
+    }
+    .body {
+      flex: 1;
+      background-color: var(--primary-color);
+      height: 100%;
+      width: 100%;
+      border-radius: 0.5rem;
+      overflow-y: auto;
+      padding: 0px 20px;
+      list-style: none;
+      li {
+        width: 100%;
+        margin: 1rem 0px;
+      }
+    }
+    .send {
+      margin-top: 1rem;
+      padding: 1rem;
+      input {
+        padding: 1rem;
+        border-radius: 0.5rem 0px 0px 0.5rem;
+        border: none;
+        outline: none;
+        font-size: 1rem;
+        background-color: var(--input-bg-color);
+        color: white;
+        width: 100%;
+      }
+      border-radius: 0.5rem;
+      background-color: var(--primary-color);
+      form {
+        display: flex;
+        align-items: center;
+        height: 100%;
+      }
+      button {
+        border: none;
+        background-color: var(--input-bg-color);
+        height: 100%;
+        outline: none;
+        cursor: pointer;
+        border-radius: 0px 0.5rem 0.5rem 0px;
+        img {
+          min-width: 30px;
+        }
+        padding-right: 1rem;
+      }
+    }
   }
 }
