--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -108,10 +108,12 @@ body {
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
+  border-radius: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 ::-webkit-scrollbar-thumb {
   background-color: #5468ff;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 body {
   overflow-y: hidden;
@@ -127,6 +129,7 @@ body {
   .left {
     overflow: hidden;
     display: flex;
+    overflow-y: scroll;
     flex-direction: column;
     background-color: var(--primary-color);
     height: 100vh;
@@ -180,6 +183,7 @@ body {
         }
       }
       .settings {
+        z-index: 2;
         position: absolute;
         height: 100vh;
         width: 400px;
@@ -188,8 +192,154 @@ body {
         top: 0px;
         height: 100vh;
         transition: 0.5s ease-in-out;
+        padding: 20px;
         &.open {
           left: 0px;
+        }
+        .settings-header {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          h1 {
+            font-size: 30px;
+            font-weight: 500;
+            margin: 1rem 0px 2rem;
+            color: white;
+          }
+          button {
+            background-color: transparent;
+            cursor: pointer;
+            border: none;
+            width: 34px;
+          }
+        }
+        .settings-pp {
+          margin-top: 1rem;
+          display: flex;
+          justify-content: center;
+          .pp-box {
+            position: relative;
+            img {
+              &:hover {
+                transform: scale(0.95);
+              }
+              height: 160px;
+              border-radius: 100%;
+              width: 160px;
+              &:hover {
+                & + .bin {
+                  display: block;
+                }
+                & ~ .add {
+                  display: block;
+                }
+              }
+            }
+            .bin,
+            .add {
+              display: none;
+              position: absolute;
+              width: 35px;
+              height: 35px;
+              border-radius: 100%;
+              background-color: var(--primary-color);
+              cursor: pointer;
+              border: none;
+              &:hover {
+                display: block;
+              }
+            }
+            .bin {
+              outline: 2px solid red;
+              bottom: 10px;
+              left: 10px;
+              img {
+                width: 25px;
+                height: 25px;
+              }
+            }
+            .add {
+              outline: 2px solid white;
+              width: 35px;
+              height: 35px;
+              bottom: 10px;
+              right: 10px;
+              .ctx {
+                position: relative;
+                width: 25px;
+                height: 25px;
+                input {
+                  opacity: 0;
+                  width: 35px;
+                  left: 0px;
+                  top: 0px;
+                  cursor: pointer !important;
+                  height: 35px;
+                  background-color: red;
+                  position: absolute;
+                }
+                img {
+                  top: 5px;
+                  left: 5px;
+                  position: absolute;
+                  width: 25px;
+                  height: 25px;
+                }
+              }
+            }
+          }
+        }
+        .settings-form {
+          margin-top: 2rem;
+          color: white;
+          label {
+            font-size: 1rem;
+            padding-left: 8px;
+            font-weight: 500;
+          }
+          .bx {
+            background-color: var(--input-bg-color);
+            display: flex;
+            border-radius: 0.5rem;
+            align-items: center;
+            margin: 8px 0px 1rem;
+            input {
+              width: 100%;
+              color: white;
+              background-color: transparent;
+              font-size: 1rem;
+              display: block;
+              padding: 1rem;
+              border: none;
+              outline: none;
+              border: none;
+            }
+            button {
+              &[disabled] {
+                cursor: not-allowed;
+                opacity: 0.4;
+              }
+              min-width: 26px;
+              width: 26px;
+              height: 26px;
+              cursor: pointer;
+              border: none;
+              background-color: transparent;
+              margin-right: 10px;
+              img {
+                pointer-events: none;
+                width: 100% !important;
+                height: 100% !important;
+              }
+            }
+            img {
+              min-width: 22px;
+              width: 22px;
+              height: 22px;
+              cursor: pointer;
+              margin-right: 10px;
+            }
+          }
         }
       }
     }
@@ -235,6 +385,7 @@ body {
     .rooms {
       flex: 1;
       display: flex;
+      min-height: 380px !important;
       overflow: hidden;
       flex-direction: column;
       padding-top: 20px;
@@ -243,6 +394,7 @@ body {
         margin-bottom: 1rem;
       }
       ul {
+        min-height: 300px !important;
         border-radius: 0.5rem;
         background-color: var(--input-bg-color);
         padding: 0px 10px;
@@ -250,6 +402,7 @@ body {
         flex: 1;
         overflow-y: auto;
         li {
+          position: relative;
           &.active {
             background-color: var(--bg-color);
           }
@@ -266,8 +419,27 @@ body {
             border-radius: 100%;
             margin-right: 10px;
           }
-          p {
-            font-size: 18px;
+          .text {
+            width: 190px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            p {
+              width: 100%;
+              font-size: 18px;
+              display: block;
+            }
+            .last {
+              color: rgb(225, 225, 225);
+              font-size: 1rem;
+            }
+            .date {
+              position: absolute;
+              right: 1rem;
+              bottom: 1rem;
+              font-size: 14px;
+              color: rgb(200, 200, 200);
+            }
           }
         }
       }
@@ -284,6 +456,15 @@ body {
     }
   }
   .messages {
+    @keyframes fade {
+      0% {
+        opacity: 0.2;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+    animation: fade 0.3s ease-in-out;
     overflow: hidden;
     background-color: var(--bg-color);
     flex: 1;
@@ -330,16 +511,64 @@ body {
     }
     .body {
       flex: 1;
-      background-color: var(--primary-color);
       height: 100%;
       width: 100%;
+      overflow-x: hidden;
       border-radius: 0.5rem;
       overflow-y: auto;
-      padding: 0px 20px;
+      padding: 0px 1rem;
       list-style: none;
       li {
-        width: 100%;
+        @keyframes fade {
+          0% {
+            opacity: 0;
+          }
+          100% {
+            opacity: 1;
+          }
+        }
+        animation: fade 0.3s ease-in-out;
         margin: 1rem 0px;
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+        justify-content: start;
+        &.my {
+          justify-content: end;
+          flex-direction: row-reverse;
+          img {
+            margin-right: 0px;
+            margin-left: 10px;
+          }
+          .msg {
+            div {
+              text-align: start;
+            }
+          }
+        }
+        img {
+          width: 40px;
+          height: 40px;
+          border-radius: 100%;
+          margin-right: 10px;
+        }
+        .msg {
+          border-radius: 0.5rem;
+          padding: 1rem;
+          max-width: 70%;
+          word-break: break-word;
+          background-color: var(--primary-color);
+          p {
+            white-space: pre-wrap;
+            font-size: 1rem;
+          }
+          div {
+            margin-top: 8px;
+            text-align: end;
+            font-weight: 300;
+            font-size: 12px;
+          }
+        }
       }
     }
     .send {
